LPS-38717 Fix spacing between fields in My Account (Instant Messenger)

--- a/portal-web/docroot/html/portlet/users_admin/css/main.css
+++ b/portal-web/docroot/html/portlet/users_admin/css/main.css
@@ -175,6 +175,10 @@
 		}
 	}
 
+	.instant-messenger {
+		margin-bottom: 30px;
+	}
+
 	table.org-labor-table {
 		margin-bottom: 30px;
 	}
